Updated project template files with URL Inspector details

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 remote_theme: JS-DevTools/gh-pages-theme
 
-title: Friendly Project Name
+title: Rehype URL Inspector
 logo: https://jsdevtools.org/img/logos/logo.png
 
 author:
