--- a/package.json
+++ b/package.json
@@ -32,9 +32,7 @@
   ],
   "scripts": {
     "clean": "shx rm -rf .nyc_output coverage lib",
-    "lint": "npm run lint:typescript && npm run lint:javascript",
-    "lint:typescript": "tslint -p tsconfig.json",
-    "lint:javascript": "eslint test",
+    "lint": "eslint src test",
     "build": "tsc",
     "watch": "tsc --watch",
     "test": "mocha && npm run lint",
@@ -47,30 +45,27 @@
     "node": ">=10"
   },
   "devDependencies": {
-    "@jsdevtools/eslint-config-modular": "^8.0.0",
-    "@jsdevtools/tslint-modular": "^2.0.1",
-    "@jsdevtools/version-bump-prompt": "^6.0.0",
-    "@types/chai": "^4.2.5",
-    "@types/mocha": "^7.0.1",
-    "@types/node": "^13.7.1",
+    "@jsdevtools/eslint-config": "^1.0.4",
+    "@jsdevtools/version-bump-prompt": "^6.0.5",
+    "@types/chai": "^4.2.11",
+    "@types/mocha": "^8.0.0",
+    "@types/node": "^14.0.23",
     "@types/unist": "^2.0.3",
     "chai": "^4.2.0",
-    "eslint": "^6.7.0",
-    "mocha": "^7.0.1",
-    "npm-check": "^5.9.0",
-    "nyc": "^15.0.0",
-    "rehype-parse": "^6.0.2",
-    "rehype-stringify": "^6.0.1",
+    "eslint": "^7.4.0",
+    "mocha": "^8.0.1",
+    "npm-check": "^5.9.2",
+    "nyc": "^15.1.0",
+    "rehype-parse": "^7.0.1",
+    "rehype-stringify": "^8.0.0",
     "shx": "^0.3.2",
-    "sinon": "^8.1.1",
-    "to-vfile": "^6.0.0",
-    "tslint": "^6.0.0",
-    "typescript": "^3.7.2",
-    "typescript-tslint-plugin": "^0.5.5",
-    "unified": "^8.4.2"
+    "sinon": "^9.0.2",
+    "to-vfile": "^6.1.0",
+    "typescript": "^3.9.7",
+    "unified": "^9.0.0"
   },
   "dependencies": {
     "url-regex": "^5.0.0",
-    "vfile": "^4.0.2"
+    "vfile": "^4.1.1"
   }
 }
