Capture stdout when debugging in VSCode

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,6 +21,7 @@
         "--timeout=60000",
         "--retries=0",
       ],
+      "outputCapture": "std",
       "outFiles": [
         "${workspaceFolder}/lib/**/*.js"
       ],
